--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "webpack-node-externals": "^1.2.0"
   },
   "dependencies": {
+    "dotenv": "^6.0.0",
     "express": "^4.14.0",
+    "knex": "^0.15.2",
+    "pg": "^7.4.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "sqlite3": "^4.0.2",
     "styled-components": "^2.2.4"
   }
 }
