--- a/package.json
+++ b/package.json
@@ -4,20 +4,33 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/server",
+    "start": "webpack -w & nodemon ./dist/server.js",
     "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "babel": {
+    "presets": [
+      "env",
+      "react"
+    ],
+    "plugins": [
+      "transform-object-rest-spread"
+    ]
+  },
   "devDependencies": {
     "babel-core": "^6.10.4",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.11.1",
     "json-loader": "^0.5.4",
-    "webpack": "^3.8.1",
-    "webpack-node-externals": "^1.2.0"
+    "nodemon": "^1.18.3",
+    "webpack": "^4.16.3",
+    "webpack-cli": "^3.1.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "dotenv": "^6.0.0",
@@ -25,8 +38,6 @@
     "knex": "^0.15.2",
     "pg": "^7.4.3",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "sqlite3": "^4.0.2",
-    "styled-components": "^2.2.4"
+    "react-dom": "^16.2.0"
   }
 }
