--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack -w & nodemon ./dist/server.js",
+    "start": "webpack -w & nodemon ./src/server/server.js",
     "build": "webpack"
   },
   "keywords": [],
@@ -26,8 +26,12 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.11.1",
+    "css-loader": "^1.0.0",
     "json-loader": "^0.5.4",
+    "node-sass": "^4.9.2",
     "nodemon": "^1.18.3",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0",
     "webpack-node-externals": "^1.7.2"
