--- a/package.json
+++ b/package.json
@@ -1,47 +1,41 @@
 {
-  "name": "park_sharer",
+  "name": "about-me",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A simple two-page website using React",
   "scripts": {
-    "start": "webpack -w & nodemon ./src/server/server.js",
-    "build": "webpack"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server --hot --inline",
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
+  "main": "server.js",
+  "engines": {
+    "node": ">=7.5.0"
+  },
+  "author": "krithix",
   "license": "ISC",
-  "babel": {
-    "presets": [
-      "env",
-      "react"
-    ],
-    "plugins": [
-      "transform-object-rest-spread"
-    ]
-  },
   "devDependencies": {
-    "babel-core": "^6.10.4",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.11.1",
-    "css-loader": "^1.0.0",
-    "json-loader": "^0.5.4",
-    "node-sass": "^4.9.2",
-    "nodemon": "^1.18.3",
-    "sass-loader": "^7.0.3",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.16.3",
-    "webpack-cli": "^3.1.0",
-    "webpack-node-externals": "^1.7.2"
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "body-parser": "^1.16.1",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "node-sass": "^4.5.0",
+    "sass-loader": "^5.0.1",
+    "style-loader": "^0.13.1",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-dev-server": "^2.3.0",
+    "webpack-hot-middleware": "^2.16.1"
   },
   "dependencies": {
     "dotenv": "^6.0.0",
-    "express": "^4.14.0",
+    "express": "^4.14.1",
     "knex": "^0.15.2",
     "pg": "^7.4.3",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2"
   }
 }
