--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack-hot-middleware": "^2.16.1"
   },
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
     "dotenv": "^6.0.0",
     "express": "^4.14.1",
     "knex": "^0.15.2",
