--- a/package.json
+++ b/package.json
@@ -31,13 +31,12 @@
     "webpack-hot-middleware": "^2.16.1"
   },
   "dependencies": {
-
     "dotenv": "^6.0.0",
     "express": "^4.14.1",
     "knex": "^0.15.2",
     "pg": "^7.4.3",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-router": "^3.0.2"
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1"
   }
 }
