--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "webpack-hot-middleware": "^2.16.1"
   },
   "dependencies": {
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.14.1",
     "knex": "^0.15.2",
+    "mapbox-gl": "^0.47.0",
     "pg": "^7.4.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
