--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "A simple two-page website using React",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --hot --inline",
     "start": "node server.js"
   },
   "main": "server.js",
@@ -15,22 +14,23 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "body-parser": "^1.16.1",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "node-sass": "^4.5.0",
-    "sass-loader": "^5.0.1",
-    "style-loader": "^0.13.1",
-    "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-dev-server": "^2.3.0",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.16.3",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-dev-server": "^3.1.5",
     "webpack-hot-middleware": "^2.16.1"
   },
   "dependencies": {
+    "ajv": "^6.5.2",
     "dotenv": "^6.0.0",
     "express": "^4.14.1",
     "knex": "^0.15.2",
