--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "author": "krithix",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.22.1",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.16.1",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
