--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "ajv": "^6.5.2",
+    "axios": "^0.18.0",
     "dotenv": "^6.0.0",
     "express": "^4.14.1",
     "knex": "^0.15.2",
