--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "dependencies": {
     "ajv": "^6.5.2",
     "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
+    "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^6.0.0",
     "express": "^4.14.1",
     "knex": "^0.15.2",
