--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "pg": "^7.4.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-mapbox-gl": "^3.8.0",
     "react-router-dom": "^4.3.1"
   }
 }
