--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
     "dotenv": "^6.0.0",
     "express": "^4.14.1",
     "knex": "^0.15.2",
-    "mapbox-gl": "^0.47.0",
+    "mapbox-gl": "^0.44.0",
     "pg": "^7.4.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-mapbox-gl": "^3.8.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "styled-components": "^3.3.3"
   }
 }
