--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": ["react", "es2015", "stage-0", "env"]
+  "presets": ["react", "es2015", "stage-0"],
+  "plugins": ["transform-class-properties"] 
 }
