--- a/package.json
+++ b/package.json
@@ -41,12 +41,13 @@
     "express": "^4.14.1",
     "knex": "^0.15.2",
     "mapbox-gl": "^0.47.0",
+    "moment": "^2.22.2",
     "pg": "^7.4.3",
     "react": "^16.4.1",
-    "react-datepicker": "^1.5.0",
+    "react-dates": "^17.1.1",
     "react-dom": "^16.4.1",
-    "react-mapbox-gl": "^3.8.0",
     "react-router-dom": "^4.3.1",
+    "react-with-styles": "^3.2.1",
     "styled-components": "^3.3.3"
   }
 }
