--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "body-parser": "^1.16.1",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "node-sass": "^4.5.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
     "webpack": "^4.16.3",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.5",
