--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ajv": "^6.5.2",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.1.3",
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^6.0.0",
     "express": "^4.14.1",
