--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^6.0.0",
     "express": "^4.14.1",
+    "express-fileupload": "^0.4.0",
     "knex": "^0.15.2",
     "mapbox-gl": "^0.47.0",
     "moment": "^2.22.2",
